--- a/HoraceTalker.Console/App.config
+++ b/HoraceTalker.Console/App.config
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="HoraceTalkerContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=HoraceTalker;Integrated Security=True;MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient" />
+    <add name="HoraceTalkerContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=HoraceTalker;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
